<resources>
    <string name="app_name">Recyclass</string>
    <string name="picture">gambar</string>
    <string name="article_title">article_title</string>
    <string name="article_author">By: %s</string>
    <string name="article_date">article_date</string>
    <string name="related_article">Artikel Terkait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plastic_type">Tipe plastik: %s</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="next">Lanjut</string>
    <string name="retry">Ulang</string>
    <string name="success_to_detect">Proses pengklasifikasian berhasil</string>
    <string name="failed_to_detect">Terjadi kesalahan saat memproses pengklasifikasian: %s</string>
    <string name="arrow">Perluas atau perkecil box</string>
    <string name="reload">Muat ulang</string>
    <string name="timeout">Timeout</string>
    <string name="no_plastic_match">Tidak ada plastik yang cocok</string>
    <string name="insert_image_first">Ambil gambar terlebih dahulu</string>
    <string name="take_plastic_picture_only">*ambil gambar plastik</string>
    <string name="app_desc">Recyclass (Recycle Classification) adalah aplikasi klasifikasi sampah berbasis computer vision. Aplikasi ini menggunakan machine learning untuk mengenali jenis sampah berdasarkan gambar yang diunggah. Terdapat 7 kelas sampah yang dikenali: HDPE, LDPE, PET, PP, PS, PVC, dan Others. Aplikasi juga memiliki fitur artikel terkait untuk meningkatkan pengetahuan tentang daur ulang, serta fitur bank sampah terdekat untuk menemukan lokasi pengumpulan sampah terdekat. Tujuan aplikasi ini adalah meningkatkan kesadaran dan partisipasi dalam praktik daur ulang.</string>
    <string name="next_page">menuju ke halaman selanjutnya</string>
</resources>